# Aries

./: .gitignore  README.md  pyproject.toml  test.json  tmp.py
assets/annotation/: 20250227_Testing.csv
assets/data/20250206_Testing/calibration/: camera01.json  camera02.json  camera03.json  camera04.json  camera05.json  camera06.json
debug/conan/: CMakeLists.txt  conanfile.py  main.cpp
lib/aria/: mps.py
lib/calibration/: marshall.py
lib/calibration/aruco-3.1.12/: CMakeLists.txt  conanfile.py  main.cpp
lib/calibration/aruco-3.1.12/utils_calibration/: AA_ArucoVersion.cpp  CMakeLists.txt  calibration_module.cpp  fractal_calibration.cpp
lib/calibration/aruco-3.1.12/utils_gl/: aruco_test_board_gl_mask.cpp
lib/calibration/aruco_ops_lib/: CMakeLists.txt  conanfile.py
lib/calibration/aruco_ops_lib/_ext-src/src/: detect.cpp
lib/calibration/test/: CMakeLists.txt  conanfile.txt  sample_detection.cpp
lib/dataset/prepare/: export_aria.py  export_marshall.py  export_marshall_calibration.py
lib/run/: calibrate_marshall.py  project.py  visualize_pcd.py
lib/run/visualization/: marshall.py  rgb.py
lib/utils/: camera.py  image.py  o3d_render.py
lib/visualization/: multi_view.py
src/aria/: timestamp.py
src/calibration/aruco_ops_lib/: setup.py
src/dataset/prepare/: aria_utils.py
src/run/: denoise_pcd.py  project.py
src/run/aria/: export.py
src/run/dataset/: 1_export_marshall.py
src/run/hand/: consolidate_meshes.py  predict_hand.py  predict_hand2.py  visualize_hand.py
src/run/rokoko/: export_bvh.py
src/run/wilor/: consolidate_meshes.py  predict_hand.py
src/utils/: camera.py  easy_convert.py  image.py  point_cloud.py  triangulation.py
src/utils/visualization/: image.py  rendering.py
