[project]
name = "aries"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.12"
dependencies = [
    "torch==2.3.1",
    "torchvision==0.18.1",
    "lightning==2.4",
    "matplotlib==3.9.2",
    "einops==0.8.1",
    "trimesh>=4.6.8",
    "opencv-python>=4.11.0.86",
    "smplx>=0.1.28",
    "h5py>=3.13.0",
    "pyrender>=0.1.45",
    "ipdb>=0.13.13",
    "wandb[media]",
    "rich",
    "rootutils",
    "imageio[ffmpeg]",
    "clip",
    "human_body_prior",
    "hydra-core",
    "hydra-optuna-sweeper",
    "hydra-colorlog",
    # "pytorch3d"
    "pytorch-warmup>=0.2.0",
    "transformers>=4.51.3",
    "numpy>=2.2.5",
    "open3d>=0.19.0",
    "ffmpeg>=1.4",
    "pyarrow>=20.0.0",
    "projectaria-tools>=1.6.0",
    "aria-studio>=1.1.0",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
    { index = "pytorch-cu118", marker = "sys_platform == 'linux'" }
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
    { index = "pytorch-cu118", marker = "sys_platform == 'linux'"}
]

[tool.ruff]
line-length = 120
ignore = ["E402"]

[tool.ruff.lint.pydocstyle]
convention = "google"
